syntax = "proto3";

package event.v1;

option go_package="./;grpcserver";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Calendar {
  rpc Create(Event) returns (EventID);
  rpc Update(Event) returns (google.protobuf.Empty);
  rpc Get(EventID) returns (Event);
  rpc Delete(EventID) returns (google.protobuf.Empty);
  rpc DeleteAll(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc ListAll(google.protobuf.Empty) returns (AllEvents);
  rpc ListDay(google.protobuf.Timestamp) returns (AllEvents);
  rpc ListWeek(google.protobuf.Timestamp) returns (AllEvents);
  rpc ListMonth(google.protobuf.Timestamp) returns (AllEvents);
}

message Event {
  int32 id=1;
  string title=2;
  google.protobuf.Timestamp start=3;
  google.protobuf.Timestamp stop=4;
  string description=5;
  int32 user_id=6;
  google.protobuf.Duration notification=7;
}

message EventID{
  int32 id=1;
}

message AllEvents{
  repeated Event AllEvents = 1;
}
